# cetacean-net

./: .gitignore  LICENSE  README.md  init-pipeline.ipynb  pyproject.toml  requirements.txt
notebooks/: init-pipeline.ipynb
scripts/: train.py
src/cetacean_net/: __init__.py  datasets.py  preprocessing.py  training.py  visualization.py
src/cetacean_net/models/: __init__.py  attention.py  blocks.py  cetacean_net.py  mobilenet.py
